--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,11 @@ dependencies:
   # Notifications
   flutter_local_notifications: ^18.0.1
   timezone: ^0.9.4
+  permission_handler: ^11.3.1
   
   # UI
   table_calendar: ^3.1.2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
